--- a/Day2/index.css
+++ b/Day2/index.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
     background-color: antiquewhite;
@@ -108,12 +112,65 @@ header a:hover{
 
 #mis-metas h2{
     margin-top: 0;
+    font-size: 3.2em;
 }
 
 #mis-metas p{
     display: none;
 }
 
-.carta:first-child{
-    background-image: url("./imgs/corrupt.gif");
+#mis-metas .carta{
+    padding: 50px;
+    margin: 20px;
+    border-radius: 15px;
+}
+
+.carta:nth-child(2){
+    
+    background-image:
+    linear-gradient(
+        0deg,
+        rgba(18, 18, 18, 0.3),
+        rgba(0,0,0,0.3)
+    ),
+    
+    url("./imgs/corrupt.gif");
+    background-position: center; 
+    background-size: cover;
+}
+
+.carta:nth-child(3){
+    
+    background-image:
+    linear-gradient(
+        0deg,
+        rgba(18, 18, 18, 0.3),
+        rgba(0,0,0,0.3)
+    ),
+    url("./imgs/crimson.gif");
+    background-position: center; 
+    background-size: cover;
+}
+
+
+.carta:nth-child(4){
+    background-image:
+    linear-gradient(
+        0deg,
+        rgba(18, 18, 18, 0.3),
+        rgba(0,0,0,0.3)
+    ),
+    url("./imgs/hallow.gif");
+    background-position: center; 
+    background-size: cover;
+}
+
+#misaspiraciones .container{
+    text-align: center;
+    padding: 200px 12px;
+}
+
+#misasoiraciones li{
+    margin: 16px 0px;
+    font-weight: bold;
 }
