--- a/Day3/index.css
+++ b/Day3/index.css
@@ -3,13 +3,14 @@
     margin: 0;
 }
 
+html{
+    background-color: antiquewhite;
+}
+
+
 header{
     width: 100%;
     height: auto;
-}
-
-#tab, #teb{
-    visibility: hidden;
 }
 
 header a{
@@ -17,10 +18,6 @@ header a{
     text-decoration: none;
     font-weight: bold;
     color: black;
-}
-
-a:target{
-    visibility:collapse;
 }
 
 header a:hover{
@@ -37,6 +34,7 @@ table{
 
 li{
     text-align: left;
+    margin-left: 10px;
 }
 
 th, td{
@@ -48,4 +46,46 @@ th, td{
 }
 
 
+header .gg{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    margin-top: 25px;
+}
 
+header a .gg:hover{
+    color: rgb(170, 70, 223);
+}
+
+header .ff{
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+
+}
+
+header a .ff:hover{
+    color: rgb(170, 70, 223);}
+
+button{
+    margin-top: 25px;
+}
+
+.btn {
+    border: none; 
+    color: black; 
+    padding: 20px 38px; 
+    cursor: pointer; 
+    border-radius: 6px;
+    margin-left: 95px;
+    margin-bottom: 20px;
+    font-size: 1.3em;
+}
+
+.f {background-color: #c16124de; border: 2px solid #ab6209;} 
+.f:hover {background: #f18c18d7; color: white;}
+
+.g {background-color: #c16124de; border: 2px solid #ab6209;} 
+.g:hover {background: #f18c18d7; color: white;}
