--- a/Day6/index.css
+++ b/Day6/index.css
@@ -3,7 +3,7 @@ html{
     left: 100px;
     width: 1400px;
     height: 800px;
-
+    background-color: antiquewhite;
 }
 
 @font-face {
@@ -16,19 +16,8 @@ body{
     font-family: 'open sans', sans-serif;
 }
 
-#hero{
-    position: relative;
-    z-index: 2;
-}
 
-#hero .he1{
-    position: absolute;
-    left: 1290px;
-    width: 110px;
-    height: 800px;
-    border-radius: 0px 8px 8px 0px;
-}
-
+/*------------header----------*/
 
 header{
     position: relative;
@@ -69,8 +58,12 @@ header{
 }
 
 .cont3 p,a{
-    text-decoration:none;
+    text-decoration:black;
     color: black;
+}
+
+.cont3 a:hover{
+    color: rgb(114, 111, 111);
 }
 
 .cont4{
@@ -88,3 +81,92 @@ header{
     width: 33px;
     height: 32px;
 }
+
+/*-------------parte negra------------*/
+
+#hero{
+    position: relative;
+    z-index: 2;
+}
+
+#hero .he1{
+    position: absolute;
+    left: 1290px;
+    width: 110px;
+    height: 800px;
+    border-radius: 0px 8px 8px 0px;
+}
+
+.he1 a:hover{
+    color: gray;
+}
+
+#hero .he2{
+    position: absolute;
+    top: 40px;
+    left: 1332px;
+    width: 24px;
+    height: 14px;
+}
+
+#hero .he3{
+    position: absolute;
+    top: 149px;
+    left: 1312px;
+    width: 84px;
+    height: 27px;
+    color: white;
+}
+
+#hero .he4{
+    position: absolute;
+    top: 304px;
+    left: 1335px;
+    width: 23px;
+    height: 187px;
+    color: white;
+    opacity: 0.5;
+}
+
+#hero .he5{
+    position: absolute;
+    top: 390px;
+    left: 1335px;
+    width: 23px;
+    height: 187px;
+    color: white;
+}
+
+#hero .he6{
+    position: absolute;
+    top: 490px;
+    left: 1335px;
+    width: 23px;
+    height: 187px;
+    color: white;
+    opacity: 0.5;
+}
+
+#hero .he7{
+    position: absolute;
+    top: 746px;
+    left: 1332px;
+    width: 24px;
+    height: 14px;
+}
+/*----------cuerpo---------*/
+
+#tarjeta{
+    position: relative;
+}
+
+.tj{
+    position: absolute;
+    top: 149px;
+    left: 127px;
+    width: 884px;
+    height: 497px;
+}
+
+/*------------patas---------------*/
+
