--- a/Day6/index.css
+++ b/Day6/index.css
@@ -3,7 +3,7 @@ html{
     left: 100px;
     width: 1400px;
     height: 800px;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
 }
 
 @font-face {
