--- a/Day6/indes1.css
+++ b/Day6/indes1.css
@@ -205,6 +205,13 @@ header{
     border: 1px solid #707070;
     border-radius: 10px;
 }
+
+.e4 input::placeholder{
+    position: absolute;
+    top: 15px;
+    left: 100px;
+    font-size: 27px;
+}
 /*--------------foot_pelota----------------*/
 
 footer{
