--- a/Day6/indes1.css
+++ b/Day6/indes1.css
@@ -1,9 +1,6 @@
 html{
-    top: 200px;
-    left: 100px;
-    width: 1400px;
-    height: 800px;
-    background-color: rgb(255, 255, 255);
+
+    background-color: wheat;
 }
 
 @font-face {
@@ -25,21 +22,19 @@ header{
     z-index: 1;
 }
 
-.cont{
+.cont img{
     position: absolute;
     top: 43px;
     left: 43px;
-    width: 110px;
-    height: 100%;
+    width: 300px;
+    height: 60px;
 }
 
 .cont2{
     position: absolute;
-    top: 40px;
-    left: 700px;
-    width: 230px;
-    height: 41px;
-    font-size: 30px;
+    top: 20px;
+    left: 920px;
+    font-size: 45px;
 }
 
 .cont2 a:hover{
@@ -48,19 +43,18 @@ header{
 
 .cont3{
     position: absolute;
-    top: 40px;
-    left: 972px;
-    width: 132px;
-    height: 41px;
-    font-size: 30px;
+    top: 20px;
+    left: 1350px;
+    font-size: 45px;
     
 }
 
 .cont3 .p1 img{
     position: absolute;
-    left: 20px;
-    top: 90px;
-    width: 95px;
+    left: 40px;
+    top: 110px;
+    width: 100px;
+    height: 50px;
 }
 
 
@@ -69,22 +63,20 @@ header{
     color: black;
 }
 
-
-
-.cont4{
+.cont4 img{
     position: absolute;
-    top: 64px;
-    left: 1123px;
-    width: 27px;
-    height: 27px;
+    top: 54px;
+    left: 1570px;
+    width: 45px;
+    height: 80px;
 }
 
-.cont5{
+.cont5 img{
     position: absolute;
-    top: 64px;
-    left: 1223px;
-    width: 33px;
-    height: 32px;
+    top: 50px;
+    left: 1760px;
+    width: 50px;
+    height: 80px;
 }
 
 /*--------------N-word-------------------*/
@@ -96,9 +88,9 @@ header{
 
 #hero .he1{
     position: absolute;
-    left: 1290px;
-    width: 110px;
-    height: 800px;
+    left: 100%;
+    width: 700;
+    height: 1200px;
     border-radius: 0px 8px 8px 0px;
 }
 
@@ -108,56 +100,52 @@ header{
 
 #hero .he2{
     position: absolute;
-    top: 40px;
-    left: 1332px;
-    width: 24px;
-    height: 14px;
+    top: 70px;
+    left: 1965px;
+    width: 37px;
+    height: 22px;
 }
 
 #hero .he3{
     position: absolute;
-    top: 149px;
-    left: 1321px;
-    width: 84px;
-    height: 27px;
+    top: 220px;
+    left: 1949px;
+    font-size: 30px;
     color: white;
 }
 
 #hero .he4{
     position: absolute;
-    top: 304px;
-    left: 1317px;
-    width: 23px;
-    height: 187px;
+    top: 404px;
+    left: 1944px;
+    font-size: 30px;
     color: white;
     opacity: 0.5;
 }
 
 #hero .he5{
     position: absolute;
-    top: 390px;
-    left: 1317px;
-    width: 23px;
-    height: 187px;
+    top: 520px;
+    left: 1944px;
+    font-size: 30px;
     color: white;
 }
 
 #hero .he6{
     position: absolute;
-    top: 490px;
-    left: 1317px;
-    width: 23px;
-    height: 187px;
+    top: 650px;
+    left: 1944px;
+    font-size: 30px;
     color: white;
     opacity: 0.5;
 }
 
-#hero .he7{
+#hero .he7 img{
     position: absolute;
-    top: 746px;
-    left: 1332px;
-    width: 24px;
-    height: 14px;
+    top: 1076px;
+    left: 1975px;
+    width: 36px;
+    height: 22px;
 }
 
 /*-----------------la mala pa movistar-------------*/
@@ -166,41 +154,45 @@ header{
     position: relative;
 }
 
-.tj{
+#tarjeta img{
+    width: 1000px;
+    height: 500px;
+}
+
+.tj {
     position: absolute;
-    top: 149px;
-    left: 348px;
-    width: 576px;
-    height: 324px;
+    top: 140px;
+    left: 390px;
+
 }
 
 .e1{
     position: absolute;
-    top: 420px;
-    left: 301px;
-    font-size: 40px;
+    top: 550px;
+    left: 401px;
+    font-size: 60px;
 }
 
 .e2{
     position: absolute;
-    top: 520px;
-    left: 483px;
-    font-size: 27px;
+    top: 720px;
+    left: 673px;
+    font-size: 40px;
 }
 
 .e3{
     position: absolute;
-    top: 584px;
-    left: 539px;
-    font-size: 27px;
+    top: 824px;
+    left: 749px;
+    font-size: 40px;
 }
 
 .e4 input{
     position: absolute;
-    top: 670px;
-    left: 495px;
-    width: 288px;
-    height: 58px;
+    top: 970px;
+    left: 695px;
+    width: 370px;
+    height: 80px;
 
     border: 1px solid #707070;
     border-radius: 10px;
@@ -208,9 +200,9 @@ header{
 
 .e4 input::placeholder{
     position: absolute;
-    top: 15px;
-    left: 100px;
-    font-size: 27px;
+    top: 20px;
+    left: 130px;
+    font-size: 40px;
 }
 /*--------------foot_pelota----------------*/
 
@@ -218,25 +210,28 @@ footer{
     position: relative;
 }
 
-.f1{
+
+.f1 img{
     position: absolute;
-    top: 647px;
-    left: 1080px;
-    width: 160px;
-    height: 114px;
+    top: 960px;
+    left: 1550px;
+    width: 300px;
+    height: 180px;
+    border-radius: 8px;
 }
+
 
 .f2 img{
     position: absolute;
-    top: 687px;
-    left: 1095px;
-    width: 129px;
-    height: 29px;
+    top: 987px;
+    left: 1610px;
+    width: 180px;
+    height: 60px;
 }
 
 .f3{
     position: absolute;
-    top: 705px;
-    left: 1105px;
-    font-size: 26px;
+    top: 1030px;
+    left: 1620px;
+    font-size: 39px;
 }
