--- a/Day6/indes1.css
+++ b/Day6/indes1.css
@@ -9,6 +9,7 @@ html{
 }
 
 body{
+    position: relative;
     font-family: 'Roboto', ;
     font-family: 'open sans', sans-serif;
 }
@@ -18,7 +19,7 @@ body{
 /*---------------c----------------*/
 
 header{
-    position: relative;
+    position: absolute;
     z-index: 1;
 }
 
@@ -37,6 +38,7 @@ header{
     position: absolute;
     top: 20px;
     left: 920px;
+    width: 800px;
     font-size: 45px;
 }
 
@@ -44,20 +46,21 @@ header{
     color: rgb(114, 111, 111);
 }
 
-.cont3{
+.cont3 p{
     position: absolute;
     top: 20px;
     left: 1350px;
+    width: 200px;
     font-size: 45px;
     
 }
 
 .cont3 .p1 img{
     position: absolute;
-    left: 40px;
-    top: 110px;
-    width: 100px;
-    height: 50px;
+    left: 20px;
+    top: 50px;
+    width: 200px;
+    height: 90px;
 }
 
 
@@ -85,15 +88,15 @@ header{
 /*--------------N-word-------------------*/
 
 #hero{
-    position: relative;
+    position: absolute;
     z-index: 2;
 }
 
 #hero .he1{
     position: absolute;
-    left: 100%;
+    left: 1900px;
     width: 700;
-    height: 1200px;
+    height: 1300px;
     border-radius: 0px 8px 8px 0px;
 }
 
