--- a/day10/index.css
+++ b/day10/index.css
@@ -78,9 +78,11 @@ body{
 .a6{
     position: absolute;
     top: 11vi;
-    animation-name: ñube;
+    animation-name: nube;
+    animation-duration: 3s;
+    animation-delay: 15s;
     opacity: 0;
-    animation: ñube 5s, nube 3s forwards;
+    
 }
 
 .a6 img{
@@ -115,8 +117,8 @@ body{
     left: 36vi;
     opacity: 0;
     animation-name: gota1;
-    animation-duration: 2s;
-    animation-delay: 5s;
+    animation-duration: 3s;
+    animation-delay: 18s;
 }
 
 .a7 img{
@@ -145,7 +147,7 @@ body{
     opacity: 0;
     animation-name: gota2;
     animation-duration: 2s;
-    animation-delay: 6s;
+    animation-delay: 19s;
 }
 
 .a8 img{
@@ -174,7 +176,7 @@ body{
     opacity: 0;
     animation-name: gota3;
     animation-duration: 2s;
-    animation-delay: 7s;
+    animation-delay: 20s;
 }
 
 .a9 img{
@@ -203,7 +205,7 @@ body{
     opacity: 0;
     animation-name: gota3;
     animation-duration: 2s;
-    animation-delay: 7s;
+    animation-delay: 19s;
 }
 
 .a10 img{
@@ -232,7 +234,7 @@ body{
     opacity: 0;
     animation-name: gota3;
     animation-duration: 2s;
-    animation-delay: 8s;
+    animation-delay: 18s;
 }
 
 .a11 img{
@@ -261,7 +263,7 @@ body{
     opacity: 0;
     animation-name: gota3;
     animation-duration: 2s;
-    animation-delay: 8s;
+    animation-delay: 20s;
 }
 
 .a12 img{
@@ -292,7 +294,7 @@ body{
     left: 30vi;
     animation: flor1 7s forwards;
     opacity: 0;
-    animation-delay: 10s;
+    animation-delay: 25s;
 }
 
 .b1 img{
@@ -300,7 +302,7 @@ body{
     
     animation: flor1 7s forwards;
     opacity: 0;
-    animation-delay: 10s;
+    animation-delay: 25s;
 }
 
 @keyframes flor1 {
@@ -323,17 +325,18 @@ body{
     position: absolute;
     top: 28vi;
     left: 36vi;
-    animation: flor1 7s forwards;
+    animation-duration: 7s;
+    animation-name: flor1;
     opacity: 0;
-    animation-delay: 10s;
+    animation-delay: 25s;
 }
 
 .b2 img{
     position: absolute;
-    
-    animation: flor1 7s forwards;
+    animation-duration: 7s;
+    animation-name: flor1;
     opacity: 0;
-    animation-delay: 10s;
+    animation-delay: 25s;
 }
 
 @keyframes flor1 {
@@ -356,9 +359,10 @@ body{
     position: absolute;
     top: 15vi;
     left: 25vi;
-    animation: flor1 7s forwards;
+    animation-duration: 7s;
+    animation-name: flor1;
     opacity: 0;
-    animation-delay: 10s;
+    animation-delay: 25s;
 }
 
 .b3 img{
@@ -384,3 +388,89 @@ body{
         opacity: 1;
     }
 }
+
+/*-----------------contador-----------------*/
+
+.c1{
+    position: absolute;
+    font-size: 12vi;
+    animation-name: tres;
+    animation-duration: 4s;
+    opacity: 0;
+    top: 15vi;
+    left: 35vi;
+}
+
+@keyframes tres {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
+
+.c2{
+    position: absolute;
+    top: 15vi;
+    left: 35vi;
+    animation-delay: 4s;
+    font-size: 12vi;
+    animation-name: dos;
+    animation-duration: 4s;
+    opacity: 0;
+}
+
+@keyframes dos {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
+
+.c3{
+    position: absolute;
+    top: 15vi;
+    left: 35vi;
+    animation-delay: 8s;
+    font-size: 12vi;
+    animation-duration: 4s;
+    animation-name: uno;
+    opacity: 0;
+}
+
+@keyframes uno {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
+
+.c4{
+    position: absolute;
+    top: 15vi;
+    left: 30vi;
+    font-size: 12vi;
+    animation-name: action;
+    animation-duration: 2s;
+    animation-delay: 14s;
+    opacity: 0;
+}
+
+@keyframes action {
+    from{
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
+
